--- a/.github/workflow/basic_workflow_dispatch_example.yml
+++ b/.github/workflow/basic_workflow_dispatch_example.yml
@@ -1,11 +1,12 @@
 name: Basic Workflow Dispatch Example
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - "main"
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - run: echo "We did the thing!"
-      
