--- a/.github/workflows/workflow_dispatch_multiple_input_example copy.yml
+++ b/.github/workflows/workflow_dispatch_multiple_input_example copy.yml
@@ -20,6 +20,6 @@ jobs:
       - run: echo "Deploying to ${{ github.event.inputs.environment }} environment."
   notify:
     runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.notify }}
+    if: ${{ github.event.inputs.notify }} == true
     steps:
       - run: echo "Deployed to ${{ github.event.inputs.environment }}"
